public/stylesheets/style.css
body{
    font-family: 'DM Sans', sans-serif;
    margin: 0;
    background-color: #ffda08;
}

.badge1, .badge2, .badge3, .badge4 {
    float: left;
    text-align: center;
    height: 50px;
    width: auto;
    padding: 2px;
}

.badges{
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    display: inline-block;
    height: 50px;
    width: auto;
}


.navbar {
    height: auto;
    width: 100%;
    background-color: #000;
    overflow: auto;
    text-decoration: none !important;
}

.navbar a {
    text-decoration: none;
    text-decoration-color: #fff;
    
}

.navbar a:hover {
    text-decoration: none;
    color: #ffda08;
}

.navbar .item {
    color: #fff;
    float: left;
    padding: 12px;
    color: #fff;
    font-size: 17px;
    float: right;
    padding-right: 20px;
}

.navbar .logo {
    text-decoration: none !important;
    padding: 8px;
    font-weight: 900;
    font-size: 24px;
    position: absolute;
    padding-left: 20px;
    float: left;
    color: #fff !important;
    margin: 0;
}

.navbar .logo a {
    color: #fff;
}
.header{
    padding: 20px;
    text-align: center;
    background-color: #fff;
}

button {
    display: inline-block;
    margin-bottom: 0;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
    cursor: pointer;
    background-color:#ffda08;
    background-image: none;
    padding: 6px 12px;
    font-size: 14px;
    border: 1px solid transparent;
    text-decoration: none;
    user-select: none;
    font-size: 1.4vw;
    -webkit-transition: 0.3s ease;
    transition: 0.3s ease;
}

button:hover {
    background-color:#2b2402;
    color: #fff;
}

button:active {
    /* background-color:#31ff08b9; */
}

.heartButton {
    display: block;
	margin: 20px auto 20px;
    text-align: center;
    /* background: #ed2553; */
    /* border-radius: 3px; */
    /* box-shadow: 0 10px 20px -8px rgb(240, 75, 113); */
    padding: 10px 17px;
    font-size: 18px;
    cursor: pointer;
    border: 1px solid #000;
    outline: none;
    /* color: #ffffff; */
    text-decoration: none;
    -webkit-transition: 0.3s ease;
    transition: 0.3s ease;
    width: 120px;
}

.heartButton:hover {
    background-color:#000;
    color: #fff;
}

.row {
    padding-top: 100px;
    display: flex;
    justify-content: center;
    text-align: left;
}

.row div {
    width: 100%;
    background-color:#fff;
}

.info {
    padding: 30px;
}


div img {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

.smallImg {
    width: 150px;
    margin-top: 20px;
}

h1 {
    font-size: 50px;
}

h2 {
    font-size: 30pxvw;
}

p, ul, ol {
    font-size: 18px;
}

li {
    margin: 10px 0;
    /* background-color:rgb(247, 242, 202); */
}

/* responsive design */
@media only screen and (max-width: 700px) {
    /* mobile */
    .container {padding: 10%;}
    .image {width: 100%;}
    .info {width: 100%;}
    
    /* .navbar .siteName {float: left; display: block;}
    .navbar .a {float: left; display: block;}
    .navbar a:not(:first-child) {display:none;}
    .navbar a.icon {float: right; display: block;}
    .navbar.responsive {position: relative; background-color: #333;}
    .navbar.responsive a.item {float: none; display: block; text-align: left; padding-bottom: 30px;}
    .navbar.responsive a.icon {float: right; display: block; position: absolute; right: 0; top: 20px;} */
}

@media only screen and (min-width: 601px) and (max-width: 960px) {
    /* tablet */
    .container {padding: 10%;}
    .image {width: 100%;}
    .info {width: 100%; }
}

@media only screen and (min-width: 961px) {
    /* desktop */
}

@media all and (max-width:30em) {
    button {
        display:block;
        margin:0.2em auto;
    }
}


dt {
  padding: 4px 0;
  font-weight: bold;
  text-align: center;
}

dd{
    margin: 0 !important;
    text-align: center;
}

form {
    text-align: left;
    width: 40%;
    margin-top: 60px auto;
    background-color: #fff;
    padding: 40px;
}

label {
    display: block;
    /* line-height: 2; */
    /* margin-bottom: 10px; */
}

input {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 1px solid #555;
    outline: none;
    display: 
    background-color: rgb(228, 228, 228);
}

input:focus {
    background-color: #ffda08 ;
}

.actionButton {
    display: block;
	margin: 20px auto 20px;
    text-align: center;
    padding: 10px 17px;
    font-size: 18px;
    cursor: pointer;
    /* border: 1px solid #000; */
    background-color:#000;
    outline: none;
    color: #ffffff;
    text-decoration: none;
    -webkit-transition: 0.3s ease;
    transition: 0.3s ease;
    width: 100%;
}

.actionButton:hover {
    background-color:#231f20;
}

.content {
    text-align: left;
    width: 40%;
    margin: auto;
    margin-top: 40px;
}

.container {
    margin: 0 auto;
    text-align: center;
    width: 1024px;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
}

.registerContainer {
    padding: 40px auto;
    /* margin-bottom: 100px; */
    text-align: center;
    width: 1024px;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    background-color: #ffffff;
}

